--- a/app/src/main/res/layout/dialog_edit_category.xml
+++ b/app/src/main/res/layout/dialog_edit_category.xml
@@ -75,3 +75,5 @@
         app:layout_constraintTop_toBottomOf="@id/tilBudgetAmount" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--hello-->
