--- a/app/src/main/res/layout/activity_transaction_history.xml
+++ b/app/src/main/res/layout/activity_transaction_history.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white">
@@ -11,66 +12,42 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@android:color/white"
         android:elevation="4dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Transactions"
-            android:textSize="18sp"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
 
         <ImageButton
             android:id="@+id/btnNotification"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/notifications_ic"
-            android:background="?attr/selectableItemBackgroundBorderless"
             android:layout_gravity="end"
-            android:layout_marginEnd="16dp" />
+            android:layout_marginEnd="16dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/notifications_ic" />
 
-<!--        <de.hdodenhof.circleimageview.CircleImageView-->
-<!--            android:id="@+id/profileImage"-->
-<!--            android:layout_width="32dp"-->
-<!--            android:layout_height="32dp"-->
-<!--            android:src="@drawable/profile_placeholder"-->
-<!--            android:layout_gravity="end"-->
-<!--            android:layout_marginEnd="16dp" />-->
+        <!--        <de.hdodenhof.circleimageview.CircleImageView-->
+        <!--            android:id="@+id/profileImage"-->
+        <!--            android:layout_width="32dp"-->
+        <!--            android:layout_height="32dp"-->
+        <!--            android:src="@drawable/profile_placeholder"-->
+        <!--            android:layout_gravity="end"-->
+        <!--            android:layout_marginEnd="16dp" />-->
 
     </androidx.appcompat.widget.Toolbar>
 
-    <TextView
-        android:id="@+id/tvAvailableBalance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Available Balance"
-        android:textSize="14sp"
-        android:textColor="#525252"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/tvBalance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="R2,450.85"
-        android:textSize="30sp"
-        android:textColor="#0582BC"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tvAvailableBalance"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <com.google.android.material.chip.ChipGroup
-        android:id="@+id/chipGroup"
+        android:id="@+id/chipGroupCategories"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toBottomOf="@id/tvBalance">
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:singleSelection="true">
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chipThisMonth"
@@ -79,29 +56,41 @@
             android:text="This Month"
             app:chipIcon="@drawable/calendar_today_ic" />
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chipAllCategories"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="All Categories"
-            app:chipIcon="@drawable/sell_ic" />
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chipPayee"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Payee"
-            app:chipIcon="@drawable/person_ic" />
+        <!-- Remove the chipAllCategories as we'll add category chips dynamically -->
 
     </com.google.android.material.chip.ChipGroup>
+
+    <Button
+        android:id="@+id/btnSelectDateRange"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select Date Range"
+        app:layout_constraintTop_toBottomOf="@id/chipGroupCategories"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btnClearDateFilter"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp" />
+
+    <Button
+        android:id="@+id/btnClearDateFilter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clear Date Filter"
+        app:layout_constraintTop_toTopOf="@id/btnSelectDateRange"
+        app:layout_constraintStart_toEndOf="@id/btnSelectDateRange"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="16dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvTransactions"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/chipGroup"
-        app:layout_constraintBottom_toTopOf="@id/bottomNavigation" />
+        android:layout_marginTop="64dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
+        app:layout_constraintTop_toBottomOf="@id/chipGroupCategories"
+        tools:listitem="@layout/item_transaction" />
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
