--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -19,14 +19,6 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/ivCategoryIcon"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-
-                android:padding="8dp"
-                android:src="@drawable/sell_ic" />
-
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -35,7 +27,7 @@
                 android:layout_marginStart="16dp">
 
                 <TextView
-                    android:id="@+id/tvTransactionName"
+                    android:id="@+id/tvCategory"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Grocery Shopping"
@@ -43,7 +35,7 @@
                     android:textColor="@android:color/black" />
 
                 <TextView
-                    android:id="@+id/tvTransactionDate"
+                    android:id="@+id/tvDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Mar 15, 2025"
@@ -53,12 +45,12 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/tvTransactionAmount"
+                android:id="@+id/tvAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="-R85.50"
                 android:textSize="16sp"
-                android:textColor="#F97316" />
+                />
 
         </LinearLayout>
 
