--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,121 +22,92 @@
             android:textColor="@color/text_color_primary"
             tools:text="February 2025" />
 
-<!--        <de.hdodenhof.circleimageview.CircleImageView-->
-<!--            android:id="@+id/profileImage"-->
-<!--            android:layout_width="@dimen/profile_image_size"-->
-<!--            android:layout_height="@dimen/profile_image_size"-->
-<!--            android:layout_gravity="end"-->
-<!--            android:layout_marginEnd="@dimen/margin_medium"-->
-<!--            android:src="@drawable/default_profile" />-->
+        <ImageView
+            android:id="@+id/profileImage"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="end"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/account_circle_ic" />
     </androidx.appcompat.widget.Toolbar>
 
-    <!-- Available Amount -->
-    <TextView
-        android:id="@+id/availableAmountText"
-        android:layout_width="wrap_content"
+    <!-- Budget Goals Card -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/budgetGoalsCard"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/text_size_xlarge"
-        android:textColor="@color/text_color_primary"
+        android:layout_margin="16dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="@dimen/margin_medium"
-        android:layout_marginTop="@dimen/margin_large"
-        tools:text="R2,450.00" />
+        tools:layout_editor_absoluteX="16dp">
 
-    <TextView
-        android:id="@+id/spendTodayText"
-        android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Budget Goals"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/minGoalText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                tools:text="Minimum: R3,000" />
+
+            <TextView
+                android:id="@+id/maxGoalText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                tools:text="Maximum: R5,000" />
+
+            <Button
+                android:id="@+id/setGoalsButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Set Goals" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <!-- Date Filter -->
+
+    <!-- Category Spending RecyclerView -->
+
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/chipGroupDates"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/text_size_medium"
-        android:textColor="@color/text_color_secondary"
-        app:layout_constraintTop_toBottomOf="@id/availableAmountText"
-        app:layout_constraintStart_toStartOf="@id/availableAmountText"
-        android:layout_marginTop="@dimen/margin_small"
-        tools:text="R81.67 left to spend today" />
+        android:layout_marginTop="12dp"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/budgetGoalsCard"
+        app:singleSelection="true"
+        tools:layout_editor_absoluteX="0dp">
 
-    <!-- Pie Chart -->
-<!--    <com.github.mikephil.charting.charts.PieChart-->
-<!--        android:id="@+id/pieChart"-->
-<!--        android:layout_width="@dimen/pie_chart_size"-->
-<!--        android:layout_height="@dimen/pie_chart_size"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/spendTodayText"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        android:layout_marginTop="@dimen/margin_large" />-->
 
-    <!-- Budget Goals -->
-<!--    <TextView-->
-<!--        android:id="@+id/budgetGoalsTitle"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="@string/budget_goals"-->
-<!--        android:textSize="@dimen/text_size_large"-->
-<!--        android:textColor="@color/text_color_primary"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/pieChart"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        android:layout_marginStart="@dimen/margin_medium"-->
-<!--        android:layout_marginTop="@dimen/margin_large" />-->
+        <com.google.android.material.chip.Chip
+            android:id="@+id/btnSelectDateRange"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Custom" />
+    </com.google.android.material.chip.ChipGroup>
 
-<!--    <ProgressBar-->
-<!--        android:id="@+id/budgetGoalsProgress"-->
-<!--        style="?android:attr/progressBarStyleHorizontal"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="@dimen/progress_bar_height"-->
-<!--        android:progress="75"-->
-<!--        android:progressTint="@color/progress_bar_color"-->
-<!--        android:background="@color/progress_bar_background"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/budgetGoalsTitle"-->
-<!--        app:layout_constraintStart_toStartOf="@id/budgetGoalsTitle"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        android:layout_marginEnd="@dimen/margin_medium"-->
-<!--        android:layout_marginTop="@dimen/margin_medium" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/budgetGoalsAssigned"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:textSize="@dimen/text_size_small"-->
-<!--        android:textColor="@color/text_color_secondary"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/budgetGoalsProgress"-->
-<!--        app:layout_constraintStart_toStartOf="@id/budgetGoalsProgress"-->
-<!--        android:layout_marginTop="@dimen/margin_small"-->
-<!--        tools:text="R3,750 assigned" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/budgetGoalsRemaining"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:textSize="@dimen/text_size_small"-->
-<!--        android:textColor="@color/text_color_secondary"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/budgetGoalsProgress"-->
-<!--        app:layout_constraintEnd_toEndOf="@id/budgetGoalsProgress"-->
-<!--        android:layout_marginTop="@dimen/margin_small"-->
-<!--        tools:text="R1,250 remaining" />-->
-
-    <!-- Categories -->
-<!--    <TextView-->
-<!--        android:id="@+id/categoriesTitle"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="@string/categories"-->
-<!--        android:textSize="@dimen/text_size_medium"-->
-<!--        android:textColor="@color/text_color_primary"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/budgetGoalsAssigned"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        android:layout_marginStart="@dimen/margin_medium"-->
-<!--        android:layout_marginTop="@dimen/margin_large" />-->
-
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:id="@+id/categoriesRecyclerView"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="0dp"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/categoriesTitle"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"-->
-<!--        android:layout_marginTop="@dimen/margin_medium"-->
-<!--        android:layout_marginBottom="@dimen/margin_small" />-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvCategoryTotals"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Bottom Navigation -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -144,9 +115,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_nav_menu"
-        app:labelVisibilityMode="labeled"/>
+        app:labelVisibilityMode="labeled" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
