--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,7 @@
     <color name="progress_background_color">#E5E5E5</color>
     <color name="expense_color">#FF5722</color>
     <color name="income_color">#4CAF50</color>
+    <color name="icon_background">#E0E0E0</color>
+    <color name="icon_tint">#757575</color>
+    <color name="amount_color">#1976D2</color>
 </resources>
