--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -39,8 +39,7 @@
         android:layout_margin="16dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        tools:layout_editor_absoluteX="16dp">
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -51,7 +50,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Budget Goals"
+                android:text="@string/budget_goals"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -74,14 +73,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Set Goals" />
+                android:text="@string/set_goals" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <!-- Date Filter -->
-
-    <!-- Category Spending RecyclerView -->
-
     <com.google.android.material.chip.ChipGroup
         android:id="@+id/chipGroupDates"
         android:layout_width="match_parent"
@@ -89,25 +85,44 @@
         android:layout_marginTop="12dp"
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@+id/budgetGoalsCard"
-        app:singleSelection="true"
-        tools:layout_editor_absoluteX="0dp">
-
+        app:singleSelection="true">
 
         <com.google.android.material.chip.Chip
             android:id="@+id/btnSelectDateRange"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Custom" />
+            android:text="@string/custom" />
     </com.google.android.material.chip.ChipGroup>
 
+    <TextView
+        android:id="@+id/tvDateRange"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/all_time"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chipGroupDates" />
+
+    <TextView
+        android:id="@+id/tvTotalSpending"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvDateRange" />
+
+    <!-- Category Spending RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCategoryTotals"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTotalSpending" />
 
     <!-- Bottom Navigation -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
