--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -66,6 +66,14 @@
             android:layout_marginTop="8dp"
             android:visibility="gone" />
 
+        <Button
+            android:id="@+id/btnViewReceipt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="View Receipt"
+            android:visibility="gone"
+            android:layout_marginTop="8dp"/>
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
